testing/macro-tests/tests/ui/index_field_not_found.stderr
error: index field 'missing_field' not found
  --> tests/ui/index_field_not_found.rs:22:21
   |
22 |     index(fields = ["missing_field"]),
   |                     ^^^^^^^^^^^^^^^
